--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: ruby
-
 rvm:
-- 2.1.1
+- 2.1
 
-script:
-- jekyll build
-#- htmlproof ./_site # thorough check on links, but reports an excess of false errors currently so turning off
+before_script:
+ - chmod +x ./script/cibuild # or do this locally and commit
 
-# branch whitelist
+# Assume bundler is being used, therefore
+# the `install` step will run `bundle install` by default.
+script: ./script/cibuild
+
+# branch whitelist, only for GitHub Pages
 branches:
   only:
-  - gh-pages     # test only the gh-pages branch
+  - gh-pages     # test the gh-pages branch
+  - /pages-(.*)/ # test every branch which starts with "pages-"
 
 env:
   global:
