--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.1
 
 before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
+ - chmod +x ./scripts/ci_build.sh # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
