--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,12 @@ before_script:
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./script/cibuild
+script: ./scripts/ci_build.sh
 
 # branch whitelist, only for GitHub Pages
 branches:
   only:
   - gh-pages     # test the gh-pages branch
-  - /pages-(.*)/ # test every branch which starts with "pages-"
 
 env:
   global:
