--- a/_output.yaml
+++ b/_output.yaml
@@ -1,18 +1,18 @@
 html_document:
-  toc: true
-  toc_depth: 4
+#  toc: true
+#  toc_depth: 4
   self_contained: false
   lib_dir: libs
 #  pandoc_args: [
 #      "--title-prefix", "Spatio-Temporal NEON Data Workshop",
 #    ]
   highlight: zenburn
-  theme: readable                                                           # https://bootswatch.com/readable/
+  theme: cosmo                                      # https://bootswatch.com/readable/
   css: 
-    - //maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css # http://fortawesome.github.io/Font-Awesome/icons/
-    - //cdnjs.cloudflare.com/ajax/libs/octicons/3.3.0/octicons.css          # https://octicons.github.com/
+    - libs/font-awesome-4.5.0/css/font-awesome.min.css # http://fortawesome.github.io/Font-Awesome/icons/
+    - libs/octicons-3.3.0/octicons.css                 # https://octicons.github.com/
     - styles/styles.css
   includes:
-#    in_header:   _output/header.html
+    in_header:   _includes/in_header.html
     before_body: _includes/before_body.html
-#    after_body:  _output/after_body.html
+    after_body:  _includes/after_body.html
