--- a/_output.yaml
+++ b/_output.yaml
@@ -7,7 +7,7 @@ html_document:
 #      "--title-prefix", "Spatio-Temporal NEON Data Workshop",
 #    ]
   highlight: zenburn
-  theme: cosmo                                      # https://bootswatch.com/readable/
+  theme: cosmo                                         # https://bootswatch.com/cosmo/
   css: 
     - libs/font-awesome-4.5.0/css/font-awesome.min.css # http://fortawesome.github.io/Font-Awesome/icons/
     - libs/octicons-3.3.0/octicons.css                 # https://octicons.github.com/
