added 'fork me on github'

--- a/_output.yaml
+++ b/_output.yaml
@@ -14,7 +14,7 @@ html_document:
     - libs/octicons-3.3.0/octicons.css                 # https://octicons.github.com/
     - styles/styles.css
   includes:
-    in_header:   _includes_rmd/in_header.html
+    in_header:   _includes/in_header_rmd.html
     before_body: _includes/before_body.html
     after_body:  _includes/after_body.html
 ioslides_presentation:
