--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,6 @@ gems: # https://pages.github.com/versions/
   
 # Conversion
 markdown:    kramdown
-highlighter: rouge
+highlighter: pygments
 kramdown:
   input: GFM
