highlighter: pygments -> rouge
- [GitHub Pages now faster and simpler with Jekyll 3.0](https://github.com/blog/2100-github-pages-now-faster-and-simpler-with-jekyll-3-0)

- [Upgrading from 2.x to 3.x -- Jekyll](http://jekyllrb.com/docs/upgrading/2-to-3/)

--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ gems: # https://pages.github.com/versions/
   - jekyll-feed
   - jemoji
 #  - jekyll-last-modified-at
-  
+
 # Conversion
 markdown:    kramdown
-highlighter: pygments
+highlighter: rouge
 kramdown:
   input: GFM
